# llm-lab

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIRECTORY_STRUCTURE_DOCS.md  IMPLEMENTATION_NOTES_TASK_13.md  IMPLEMENTATION_NOTES_TASK_14.md  IMPLEMENTATION_NOTES_TASK_15.md  IMPLEMENTATION_NOTES_TASK_18.md  LICENSE  MIGRATION_GUIDE.md  MIGRATION_TO_DOWNLOAD_SYSTEM.md  Makefile  README.md  REFACTORING_SUGGESTIONS.md  RESTRUCTURE_PLAN.md  SECURITY.md  cleanup_git_assets.sh  compare_results.py  config.py  config_cli.py  import_audit_report_summary.md  migration_analysis.md  mypy.ini  project_plan.md  providers.example.yaml  providers.yaml  pyproject.toml  pytest.ini  register_local_provider.py  requirements-dashboard.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  results_logger.py  ruff.toml  (+13 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-optimized.yml  ci.yml  codeql.yml  coverage.yml  cross-llm-testing.yml  documentation.yml  test-categories.yml  test-suite.yml  test.yml
.taskmaster/: state.json
.taskmaster/docs/: codebase_structure_standards.md  configuration-audit.md  configuration-reference.md  configuration-templates.md  expand-model-coverage-prd.md  generic-types-audit.md  initial_mvp_prd.txt  local-llm-benchmark-integration-prd.md  python-code-quality-improvement-prd.md  standardized_use_case_structure.md  use-cases-documentation-prd.md  use_case_10_llm_security_testing.md  use_case_12_synthetic_data_generation.md  use_case_14_automated_model_documentation.md  use_case_17_llm_interpretability_suite.md  use_case_18_llm_benchmark_creation_tool.md  use_case_6_enhancement_prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  task_025.txt  task_026.txt  task_027.txt  task_028.txt  task_029.txt  task_030.txt  task_031.txt  task_032.txt  task_033.txt  task_034.txt  task_035.txt  task_036.txt  task_037.txt  task_038.txt  task_039.txt  task_040.txt  (+12 more)
attack-library-system/: README.md  debug_expand.py  requirements.txt  setup.py
attack-library-system/tests/: test_attack_library.py  test_models.py  test_prompt_generator.py
benchmark/: __init__.py  multi_runner.py
benchmark-creation-platform/: .gitignore  README.md  setup.py
benchmarks/: __init__.py
benchmarks/datasets/: __init__.py
benchmarks/runners/: __init__.py  multi_runner.py
config/: __init__.py  provider_config.py  providers.yaml
datasets/: README.md  download_datasets.py  manifest.json
docs/: CHANGELOG.md  CONFIGURATION.md  DEPENDENCY_MATRIX.md  Makefile  README.md  RemyOlson_Resume_2025.md  TROUBLESHOOTING.md  conf.py  index.rst  remyolson_profile.md  requirements.txt
docs/_static/: custom.css  (+1 more)
evaluation/: keyword_match.py
examples/: README.md  di_system_demo.py  multi_model_benchmark_demo.py  quick_start.py
interpretability-suite/: .gitignore  pyproject.toml  requirements.txt  setup.py
interpretability-suite/src/interpretability/: cli.py
interpretability-suite/src/interpretability/analyzers/: attention_analyzer.py  gradient_analyzer.py
interpretability-suite/src/interpretability/config/: __init__.py
interpretability-suite/src/interpretability/explanations/: __init__.py  explanation_generator.py  feature_attributor.py
interpretability-suite/src/interpretability/visualizers/: __init__.py  attention_visualizer.py
llm-security-framework/: LICENSE  MANIFEST.in  Makefile  mypy.ini  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.py
llm-security-framework/src/llm_security/: __init__.py
llm-security-framework/src/llm_security/config/: __init__.py
llm-security-framework/src/llm_security/core/: __init__.py
llm-security-framework/src/llm_security/providers/: async_adapter.py  azure_adapter.py  base.py  factory.py  fingerprinting.py
llm-security-framework/src/llm_security/redteam/: __init__.py
llm-security-framework/src/llm_security/utils/: __init__.py
llm_providers/: anthropic.py  base.py  exceptions.py  registry.py
model-documentation-system/: .gitignore  requirements.txt  setup.py
models/: README.md
results/: .gitkeep
scripts/: __init__.py  audit_imports.py  compare_results.py  config_cli.py  convert_datasets.py  download_assets.py  finetune.py  fix_imports.py  migration_tools.py  run_benchmarks.py  test_bootstrap.py
src/: __init__.py
src/use_cases/benchmark_creation/: LICENSE  __init__.py  pyproject.toml  requirements.txt  setup.py
src/use_cases/benchmark_creation/src/benchmark_builder/: __init__.py
src/use_cases/benchmark_creation/src/benchmark_builder/generators/: base.py  factory.py
synthetic-data-platform/: .gitignore  pyproject.toml  requirements.txt  setup.py
synthetic-data-platform/src/synthetic_data/: __init__.py
synthetic-data-platform/src/synthetic_data/core/: __init__.py
synthetic-data-platform/src/synthetic_data/generators/: __init__.py  code.py  educational.py  legal.py  medical.py
tests/: README.md  TEST_REORGANIZATION_PLAN.md  __init__.py  conftest.py  test_alignment.py  test_anthropic_provider.py  test_comparator.py  test_config.py  test_di_system.py  test_evaluation.py  test_fine_tuning.py  test_integrated_workflows.py  test_llm_providers.py  test_local_benchmark_runner.py  test_local_model_provider.py  test_monitoring.py  test_multi_runner.py  test_openai_provider.py  test_provider_base.py  test_provider_config.py  test_provider_exceptions.py  test_provider_registry.py  test_results_logger.py  test_results_logger_enhanced.py  test_run_benchmarks.py  test_run_benchmarks_cli.py  test_run_benchmarks_engine.py  test_template_engine.py  test_truthfulness_benchmark.py
(+662 files in other folders)
