[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interpretability-suite"
version = "0.1.0"
description = "Comprehensive interpretability toolkit for Large Language Models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LLM Lab Team", email = "team@llm-lab.io"}
]
keywords = ["llm", "interpretability", "explainability", "attention", "visualization", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/llm-lab/interpretability-suite"
Documentation = "https://interpretability-suite.readthedocs.io"
Repository = "https://github.com/llm-lab/interpretability-suite.git"
Issues = "https://github.com/llm-lab/interpretability-suite/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = """
    -ra
    -q
    --strict-markers
    --cov=interpretability
    --cov-report=term-missing
"""
