[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-data-platform"
version = "0.1.0"
description = "A comprehensive platform for generating high-quality synthetic data using LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LLM Lab Team", email = "team@llm-lab.io"}
]
keywords = ["synthetic-data", "llm", "data-generation", "ai", "machine-learning", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/llm-lab/synthetic-data-platform"
Documentation = "https://synthetic-data-platform.readthedocs.io"
Repository = "https://github.com/llm-lab/synthetic-data-platform.git"
Issues = "https://github.com/llm-lab/synthetic-data-platform/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
synthetic_data = ["templates/*.yaml", "templates/*.json", "config/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = """
    -ra
    -q
    --strict-markers
    --cov=synthetic_data
    --cov-report=term-missing
"""

[tool.coverage.run]
source = ["src/synthetic_data"]
omit = ["*/tests/*", "*/__init__.py"]
